--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "A simple wrapper around esbuild to use tsconfig.json directly, like tsc.",
   "main": "dist/index.js",
   "scripts": {
-    "test": "node dist/index.js -p test/tsconfig.json",
+    "test": "node dist/index.js -p test/tsconfig.json --list-output",
     "build": "tsc",
+    "build:self": "node dist/index.js -p tsconfig.json --list-output",
     "prepublishOnly": "yarn build"
   },
   "keywords": [
@@ -19,7 +20,7 @@
   "type": "commonjs",
   "types": "dist/index.d.ts",
   "bin": {
-    "esb": "dist/index.js"
+    "h-builder": "dist/index.js"
   },
   "packageManager": "yarn@4.12.0",
   "dependencies": {
@@ -28,11 +29,11 @@
     "glob": "^13.0.0",
     "jsonc-parser": "^3.3.1",
     "strip-json-comments": "^5.0.3",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.9.3"
   },
   "devDependencies": {
     "@types/glob": "^9.0.0",
-    "@types/node": "^25.0.3",
-    "typescript": "^5.9.3"
+    "@types/node": "^25.0.3"
   }
 }
